[workspace]
members = [
  "fennel-compile",
  "fennel-mount",
  "fennel-searcher",
  "fennel-src",
  "meka-config",
  "meka-config-macros",
  "meka-config-macros-test-empty-metadata",
  "meka-config-macros-test-empty-metadata-section",
  "meka-config-macros-test-graceful-degradation",
  "meka-config-macros-test-invalid-loader-path",
  "meka-config-macros-test-multiple-loaders",
  "meka-config-macros-test-single-loader",
  "meka-config-tests",
  "meka-module-manifest",
  "meka-module-manifest-tests",
  "meka-searcher",
  "meka-searcher-macros",
  "meka-searcher-macros-test-empty",
  "meka-searcher-macros-test-map-only",
  "meka-searcher-macros-test-string-and-map",
  "meka-searcher-macros-test-string-only",
  "meka-searcher-macros-test-trailing-comma",
  "meka-types",
  "meka-utils",
  "mlua-module-manifest",
  "mlua-searcher",
  "mlua-utils"
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Andy Weidenbaum <atweiden@ioiojo.com>"]
license = "MIT OR Apache-2.0"
keywords = ["fennel", "lua"]
repository = "https://git.sr.ht/~ioiojo/meka"

[workspace.dependencies]
derive_builder = { version = "0.20" }
gpgrv = { version = "0.4" }
ignore = { version = "0.4" }
io-cat = { git = "https://git.sr.ht/~ioiojo/io-cat", rev = "f1bc096673bf12d09cf91beb96d247ce4bf18d73" }
mlua = { version = "0.10", default-features = false }
once_cell = { version = "1" }
optional-collections = { git = "https://git.sr.ht/~ioiojo/optional-collections", rev = "d9a0720d39b975bd0c117e42e12aba2c1d908a6d" }
paste = { version = "1" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
semver = { version = "1" }
serial_test = { version = "3" }
syn = { version = "2", features = ["full"] }
toml = { version = "0.8" }
