[package]
name = "meka"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
homepage = "https://sr.ht/~ioiojo/meka"
repository = { workspace = true }
description = "Embed Lua and compile-to-Lua language modules in Rust"

[features]
default = ["fennel153"]
fennel100 = ["meka-config/fennel100", "meka-module-manifest/fennel100", "meka-searcher/fennel100"]
fennel153 = ["meka-config/fennel153", "meka-module-manifest/fennel153", "meka-searcher/fennel153"]
mlua-lua54 = ["meka-config/mlua-lua54", "meka-module-manifest/mlua-lua54", "meka-searcher/mlua-lua54", "mlua/lua54", "mlua-module-manifest/mlua-lua54"]
mlua-lua53 = ["meka-config/mlua-lua53", "meka-module-manifest/mlua-lua53", "meka-searcher/mlua-lua53", "mlua/lua53", "mlua-module-manifest/mlua-lua53"]
mlua-lua52 = ["meka-config/mlua-lua52", "meka-module-manifest/mlua-lua52", "meka-searcher/mlua-lua52", "mlua/lua52", "mlua-module-manifest/mlua-lua52"]
mlua-lua51 = ["meka-config/mlua-lua51", "meka-module-manifest/mlua-lua51", "meka-searcher/mlua-lua51", "mlua/lua51", "mlua-module-manifest/mlua-lua51"]
mlua-luajit = ["meka-config/mlua-luajit", "meka-module-manifest/mlua-luajit", "meka-searcher/mlua-luajit", "mlua/luajit", "mlua-module-manifest/mlua-luajit"]
mlua-luajit52 = ["meka-config/mlua-luajit52", "meka-module-manifest/mlua-luajit52", "meka-searcher/mlua-luajit52", "mlua/luajit52", "mlua-module-manifest/mlua-luajit52"]
mlua-luau = ["meka-config/mlua-luau", "meka-module-manifest/mlua-luau", "meka-searcher/mlua-luau", "mlua/luau", "mlua-module-manifest/mlua-luau"]
mlua-luau-jit = ["meka-config/mlua-luau-jit", "meka-module-manifest/mlua-luau-jit", "meka-searcher/mlua-luau-jit", "mlua/luau-jit", "mlua-module-manifest/mlua-luau-jit"]
mlua-luau-vector4 = ["meka-config/mlua-luau-vector4", "meka-module-manifest/mlua-luau-vector4", "meka-searcher/mlua-luau-vector4", "mlua/luau-vector4", "mlua-module-manifest/mlua-luau-vector4"]
mlua-vendored = ["meka-config/mlua-vendored", "meka-module-manifest/mlua-vendored", "meka-searcher/mlua-vendored", "mlua/vendored", "mlua-module-manifest/mlua-vendored"]

[dependencies]
meka-config = { path = "./meka-config", default-features = false }
meka-module-manifest = { path = "./meka-module-manifest", default-features = false }
meka-searcher = { path = "./meka-searcher", default-features = false }
mlua = { workspace = true }
mlua-module-manifest = { path = "./mlua-module-manifest", default-features = false }

[workspace]
members = [
  "fennel-compile",
  "fennel-mount",
  "fennel-searcher",
  "fennel-src",
  "meka-config",
  "meka-config-macros",
  "meka-config-macros-test-empty-metadata",
  "meka-config-macros-test-empty-metadata-section",
  "meka-config-macros-test-graceful-degradation",
  "meka-config-macros-test-invalid-loader-path",
  "meka-config-macros-test-multiple-loaders",
  "meka-config-macros-test-single-loader",
  "meka-macros",
  "meka-module-manifest",
  "meka-module-manifest-tests",
  "meka-searcher",
  "meka-searcher-macros",
  "meka-searcher-macros-test-empty",
  "meka-searcher-macros-test-map-only",
  "meka-searcher-macros-test-string-and-map",
  "meka-searcher-macros-test-string-only",
  "meka-searcher-macros-test-trailing-comma",
  "meka-types",
  "meka-utils",
  "mlua-module-manifest",
  "mlua-searcher",
  "mlua-utils"
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Andy Weidenbaum <atweiden@ioiojo.com>"]
license = "MIT OR Apache-2.0"
keywords = ["fennel", "lua"]
repository = "https://git.sr.ht/~ioiojo/meka"

[workspace.dependencies]
derive_builder = { version = "0.20" }
gpgrv = { version = "0.4" }
ignore = { version = "0.4" }
io-cat = { git = "https://git.sr.ht/~ioiojo/io-cat", rev = "f1bc096673bf12d09cf91beb96d247ce4bf18d73" }
mlua = { version = "0.10", default-features = false }
once_cell = { version = "1" }
optional-collections = { git = "https://git.sr.ht/~ioiojo/optional-collections", rev = "d9a0720d39b975bd0c117e42e12aba2c1d908a6d" }
paste = { version = "1" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
semver = { version = "1" }
serial_test = { version = "3" }
syn = { version = "2", features = ["full"] }
toml = { version = "0.8" }
