[package]
name = "meka"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
homepage = "https://sr.ht/~ioiojo/meka"
repository = { workspace = true }
description = "Embed Lua and compile-to-Lua language modules in Rust"

[features]
default = ["fennel153", "registry"]
fennel100 = ["meka-core/fennel100", "meka-searcher-macros/fennel100"]
fennel153 = ["meka-core/fennel153", "meka-searcher-macros/fennel153"]
mlua-external = ["meka-core/mlua-external", "meka-searcher-macros/mlua-external"]
mlua-lua54 = ["meka-core/mlua-lua54", "meka-searcher-macros/mlua-lua54"]
mlua-lua53 = ["meka-core/mlua-lua53", "meka-searcher-macros/mlua-lua53"]
mlua-lua52 = ["meka-core/mlua-lua52", "meka-searcher-macros/mlua-lua52"]
mlua-lua51 = ["meka-core/mlua-lua51", "meka-searcher-macros/mlua-lua51"]
mlua-luajit = ["meka-core/mlua-luajit", "meka-searcher-macros/mlua-luajit"]
mlua-luajit52 = ["meka-core/mlua-luajit52", "meka-searcher-macros/mlua-luajit52"]
mlua-luau = ["meka-core/mlua-luau", "meka-searcher-macros/mlua-luau"]
mlua-luau-jit = ["meka-core/mlua-luau-jit", "meka-searcher-macros/mlua-luau-jit"]
mlua-luau-vector4 = ["meka-core/mlua-luau-vector4", "meka-searcher-macros/mlua-luau-vector4"]
mlua-module = ["meka-core/mlua-module", "meka-searcher-macros/mlua-module"]
mlua-vendored = ["meka-core/mlua-vendored", "meka-searcher-macros/mlua-vendored"]
# generate more efficient code when passing inline map to proc macros (recommended)
# only disable if importing unregistered manifest-loader functions in meka manifest
registry = ["meka-searcher-macros/registry"]

[dependencies]
meka-core = { path = "./meka-core", default-features = false }
meka-searcher-macros = { path = "./meka-searcher-macros", default-features = false }

[workspace]
members = [
  "fennel-compile",
  "fennel-mount",
  "fennel-searcher",
  "fennel-src",
  "fennel-utils",
  "io-cat",
  "meka-config",
  "meka-config-evaluator",
  "meka-config-macros",
  "meka-config-macros-test-empty-metadata",
  "meka-config-macros-test-empty-metadata-section",
  "meka-config-macros-test-graceful-degradation",
  "meka-config-macros-test-invalid-loader-path",
  "meka-config-macros-test-multiple-loaders",
  "meka-config-macros-test-single-loader",
  "meka-config-tests-module-mode",
  "meka-core",
  "meka-loader",
  "meka-module-manifest",
  "meka-module-manifest-compiler",
  "meka-module-manifest-tests",
  "meka-module-manifest-tests-module-mode",
  "meka-module-registry",
  "meka-searcher",
  "meka-searcher-macros",
  "meka-searcher-macros-test-empty",
  "meka-searcher-macros-test-map-only",
  "meka-searcher-macros-test-string-and-map",
  "meka-searcher-macros-test-string-only",
  "meka-searcher-macros-test-trailing-comma",
  "meka-types",
  "meka-utils",
  "mlua-module-manifest",
  "mlua-searcher",
  "mlua-utils"
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Andy Weidenbaum <atweiden@ioiojo.com>"]
license = "MIT OR Apache-2.0"
keywords = ["fennel", "lua"]
repository = "https://git.sr.ht/~ioiojo/meka"

[workspace.dependencies]
derive_builder = { version = "0.20" }
gpgrv = { version = "0.4" }
ignore = { version = "0.4" }
mlua = { version = "0.11", default-features = false }
once_cell = { version = "1" }
optional-collections = { git = "https://git.sr.ht/~ioiojo/optional-collections", rev = "d9a0720d39b975bd0c117e42e12aba2c1d908a6d" }
paste = { version = "1" }
phf = { version = "0.12", features = ["macros"] }
proc-macro2 = { version = "1" }
quote = { version = "1" }
savefile = { version = "0.19" }
savefile-derive = { version = "0.19" }
semver = { version = "1" }
serial_test = { version = "3" }
syn = { version = "2", features = ["full"] }
tempfile = { version = "3" }
toml = { version = "0.8" }
