[package]
name = "fennel-searcher"
version = "0.1.0"
edition = { workspace = true }
homepage = "https://git.sr.ht/~ioiojo/meka/tree/master/item/fennel-searcher"
readme = "README.md"
description = "Require Fennel modules by name"

[features]
default = ["fennel153"]
fennel100 = ["fennel-mount/fennel100"]
fennel153 = ["fennel-mount/fennel153"]
mlua-lua54 = ["fennel-compile/mlua-lua54", "fennel-mount/mlua-lua54", "mlua/lua54", "mlua-searcher/mlua-lua54"]
mlua-lua53 = ["fennel-compile/mlua-lua53", "fennel-mount/mlua-lua53", "mlua/lua53", "mlua-searcher/mlua-lua53"]
mlua-lua52 = ["fennel-compile/mlua-lua52", "fennel-mount/mlua-lua52", "mlua/lua52", "mlua-searcher/mlua-lua52"]
mlua-lua51 = ["fennel-compile/mlua-lua51", "fennel-mount/mlua-lua51", "mlua/lua51", "mlua-searcher/mlua-lua51"]
mlua-luajit = ["fennel-compile/mlua-luajit", "fennel-mount/mlua-luajit", "mlua/luajit", "mlua-searcher/mlua-luajit"]
mlua-luajit52 = ["fennel-compile/mlua-luajit52", "fennel-mount/mlua-luajit52", "mlua/luajit52", "mlua-searcher/mlua-luajit52"]
mlua-luau = ["fennel-compile/mlua-luau", "fennel-mount/mlua-luau", "mlua/luau", "mlua-searcher/mlua-luau"]
mlua-luau-jit = ["fennel-compile/mlua-luau-jit", "fennel-mount/mlua-luau-jit", "mlua/luau-jit", "mlua-searcher/mlua-luau-jit"]
mlua-luau-vector4 = ["fennel-compile/mlua-luau-vector4", "fennel-mount/mlua-luau-vector4", "mlua/luau-vector4", "mlua-searcher/mlua-luau-vector4"]
mlua-vendored = ["fennel-compile/mlua-vendored", "fennel-mount/mlua-vendored", "mlua/vendored", "mlua-searcher/mlua-vendored"]

[dependencies]
fennel-compile = { path = "../fennel-compile", default-features = false }
fennel-mount = { path = "../fennel-mount", default-features = false }
io-cat = { path = "../io-cat" }
meka-types = { path = "../meka-types" }
mlua = { workspace = true }
mlua-searcher = { path = "../mlua-searcher", default-features = false }

[dev-dependencies]
fennel-compile = { path = "../fennel-compile", default-features = false, features = ["mlua-lua54", "mlua-vendored"] }
fennel-mount = { path = "../fennel-mount", default-features = false, features = ["fennel153", "mlua-lua54", "mlua-vendored"] }
fennel-searcher = { path = ".", default-features = false, features = ["fennel153", "mlua-lua54", "mlua-vendored"] }
mlua = { workspace = true, default-features = false, features = ["lua54", "vendored"] }
serial_test = { workspace = true }
