[package]
name = "io-cat"
version = "0.1.0"
edition = { workspace = true }
homepage = "https://git.sr.ht/~ioiojo/meka/tree/master/item/io-cat"
readme = "README.md"
description = "Trait for types which can be read to string"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
