[package]
name = "meka-config-evaluator"
version = "0.1.0"
edition = { workspace = true }
homepage = "https://git.sr.ht/~ioiojo/meka/tree/master/item/meka-config-evaluator"
readme = "README.md"
description = "Helper crate for instantiating ~ioiojo/meka-config in mlua module mode"
publish = false

[features]
default = ["fennel153"]
fennel100 = ["fennel-mount/fennel100", "meka-config/fennel100", "meka-module-registry/fennel100"]
fennel153 = ["fennel-mount/fennel153", "meka-config/fennel153", "meka-module-registry/fennel153"]
mlua-external = ["fennel-compile/mlua-external", "fennel-mount/mlua-external", "fennel-searcher/mlua-external", "fennel-utils/mlua-external", "meka-config/mlua-external", "meka-loader/mlua-external", "meka-module-registry/mlua-external", "mlua-module-manifest/mlua-external", "mlua-searcher/mlua-external", "mlua-utils/mlua-external"]
mlua-lua54 = ["fennel-compile/mlua-lua54", "fennel-mount/mlua-lua54", "fennel-searcher/mlua-lua54", "fennel-utils/mlua-lua54", "meka-config/mlua-lua54", "meka-loader/mlua-lua54", "meka-module-registry/mlua-lua54", "mlua/lua54", "mlua-module-manifest/mlua-lua54", "mlua-searcher/mlua-lua54", "mlua-utils/mlua-lua54"]
mlua-lua53 = ["fennel-compile/mlua-lua53", "fennel-mount/mlua-lua53", "fennel-searcher/mlua-lua53", "fennel-utils/mlua-lua53", "meka-config/mlua-lua53", "meka-loader/mlua-lua53", "meka-module-registry/mlua-lua53", "mlua/lua53", "mlua-module-manifest/mlua-lua53", "mlua-searcher/mlua-lua53", "mlua-utils/mlua-lua53"]
mlua-lua52 = ["fennel-compile/mlua-lua52", "fennel-mount/mlua-lua52", "fennel-searcher/mlua-lua52", "fennel-utils/mlua-lua52", "meka-config/mlua-lua52", "meka-loader/mlua-lua52", "meka-module-registry/mlua-lua52", "mlua/lua52", "mlua-module-manifest/mlua-lua52", "mlua-searcher/mlua-lua52", "mlua-utils/mlua-lua52"]
mlua-lua51 = ["fennel-compile/mlua-lua51", "fennel-mount/mlua-lua51", "fennel-searcher/mlua-lua51", "fennel-utils/mlua-lua51", "meka-config/mlua-lua51", "meka-loader/mlua-lua51", "meka-module-registry/mlua-lua51", "mlua/lua51", "mlua-module-manifest/mlua-lua51", "mlua-searcher/mlua-lua51", "mlua-utils/mlua-lua51"]
mlua-luajit = ["fennel-compile/mlua-luajit", "fennel-mount/mlua-luajit", "fennel-searcher/mlua-luajit", "fennel-utils/mlua-luajit", "meka-config/mlua-luajit", "meka-loader/mlua-luajit", "meka-module-registry/mlua-luajit", "mlua/luajit", "mlua-module-manifest/mlua-luajit", "mlua-searcher/mlua-luajit", "mlua-utils/mlua-luajit"]
mlua-luajit52 = ["fennel-compile/mlua-luajit52", "fennel-mount/mlua-luajit52", "fennel-searcher/mlua-luajit52", "fennel-utils/mlua-luajit52", "meka-config/mlua-luajit52", "meka-loader/mlua-luajit52", "meka-module-registry/mlua-luajit52", "mlua/luajit52", "mlua-module-manifest/mlua-luajit52", "mlua-searcher/mlua-luajit52", "mlua-utils/mlua-luajit52"]
mlua-luau = ["fennel-compile/mlua-luau", "fennel-mount/mlua-luau", "fennel-searcher/mlua-luau", "fennel-utils/mlua-luau", "meka-config/mlua-luau", "meka-loader/mlua-luau", "meka-module-registry/mlua-luau", "mlua/luau", "mlua-module-manifest/mlua-luau", "mlua-searcher/mlua-luau", "mlua-utils/mlua-luau"]
mlua-luau-jit = ["fennel-compile/mlua-luau-jit", "fennel-mount/mlua-luau-jit", "fennel-searcher/mlua-luau-jit", "fennel-utils/mlua-luau-jit", "meka-config/mlua-luau-jit", "meka-loader/mlua-luau-jit", "meka-module-registry/mlua-luau-jit", "mlua/luau-jit", "mlua-module-manifest/mlua-luau-jit", "mlua-searcher/mlua-luau-jit", "mlua-utils/mlua-luau-jit"]
mlua-luau-vector4 = ["fennel-compile/mlua-luau-vector4", "fennel-mount/mlua-luau-vector4", "fennel-searcher/mlua-luau-vector4", "fennel-utils/mlua-luau-vector4", "meka-config/mlua-luau-vector4", "meka-loader/mlua-luau-vector4", "meka-module-registry/mlua-luau-vector4", "mlua/luau-vector4", "mlua-module-manifest/mlua-luau-vector4", "mlua-searcher/mlua-luau-vector4", "mlua-utils/mlua-luau-vector4"]
mlua-vendored = ["fennel-compile/mlua-vendored", "fennel-mount/mlua-vendored", "fennel-searcher/mlua-vendored", "fennel-utils/mlua-vendored", "meka-config/mlua-vendored", "meka-loader/mlua-vendored", "meka-module-registry/mlua-vendored", "mlua/vendored", "mlua-module-manifest/mlua-vendored", "mlua-searcher/mlua-vendored", "mlua-utils/mlua-vendored"]

[dependencies]
fennel-compile = { path = "../fennel-compile", default-features = false }
fennel-mount = { path = "../fennel-mount", default-features = false }
fennel-searcher = { path = "../fennel-searcher", default-features = false }
fennel-utils = { path = "../fennel-utils", default-features = false }
meka-config = { path = "../meka-config", default-features = false, features = ["meka-config-evaluator"] }
meka-loader = { path = "../meka-loader", default-features = false }
meka-module-registry = { path = "../meka-module-registry", default-features = false }
mlua = { workspace = true }
mlua-module-manifest = { path = "../mlua-module-manifest", default-features = false }
mlua-searcher = { path = "../mlua-searcher", default-features = false }
mlua-utils = { path = "../mlua-utils", default-features = false }
savefile = { workspace = true }
