[package]
name = "meka-config-evaluator"
version = "0.1.0"
edition = { workspace = true }
homepage = "https://git.sr.ht/~ioiojo/meka/tree/master/item/meka-config-evaluator"
readme = "README.md"
description = "Helper crate for instantiating ~ioiojo/meka-config in mlua module mode"
publish = false

[features]
default = ["fennel160"]
fennel100 = ["meka-config/fennel100", "meka-module-registry/fennel100"]
fennel153 = ["meka-config/fennel153", "meka-module-registry/fennel153"]
fennel160 = ["meka-config/fennel160", "meka-module-registry/fennel160"]
mlua-external = ["meka-config/mlua-external", "meka-loader/mlua-external", "meka-module-registry/mlua-external", "mlua-module-manifest/mlua-external"]
mlua-lua54 = ["meka-config/mlua-lua54", "meka-loader/mlua-lua54", "meka-module-registry/mlua-lua54", "mlua-module-manifest/mlua-lua54"]
mlua-lua53 = ["meka-config/mlua-lua53", "meka-loader/mlua-lua53", "meka-module-registry/mlua-lua53", "mlua-module-manifest/mlua-lua53"]
mlua-lua52 = ["meka-config/mlua-lua52", "meka-loader/mlua-lua52", "meka-module-registry/mlua-lua52", "mlua-module-manifest/mlua-lua52"]
mlua-lua51 = ["meka-config/mlua-lua51", "meka-loader/mlua-lua51", "meka-module-registry/mlua-lua51", "mlua-module-manifest/mlua-lua51"]
mlua-luajit = ["meka-config/mlua-luajit", "meka-loader/mlua-luajit", "meka-module-registry/mlua-luajit", "mlua-module-manifest/mlua-luajit"]
mlua-luajit52 = ["meka-config/mlua-luajit52", "meka-loader/mlua-luajit52", "meka-module-registry/mlua-luajit52", "mlua-module-manifest/mlua-luajit52"]
mlua-luau = ["meka-config/mlua-luau", "meka-loader/mlua-luau", "meka-module-registry/mlua-luau", "mlua-module-manifest/mlua-luau"]
mlua-luau-jit = ["meka-config/mlua-luau-jit", "meka-loader/mlua-luau-jit", "meka-module-registry/mlua-luau-jit", "mlua-module-manifest/mlua-luau-jit"]
mlua-luau-vector4 = ["meka-config/mlua-luau-vector4", "meka-loader/mlua-luau-vector4", "meka-module-registry/mlua-luau-vector4", "mlua-module-manifest/mlua-luau-vector4"]
mlua-vendored = ["meka-config/mlua-vendored", "meka-loader/mlua-vendored", "meka-module-registry/mlua-vendored", "mlua-module-manifest/mlua-vendored"]

[dependencies]
meka-config = { path = "../meka-config", default-features = false, features = ["meka-config-evaluator"] }
meka-loader = { path = "../meka-loader", default-features = false }
meka-module-registry = { path = "../meka-module-registry", default-features = false }
mlua-module-manifest = { path = "../mlua-module-manifest", default-features = false }
savefile = { workspace = true }
