[package]
name = "meka-config-macros-test-multiple-loaders"
version = "0.1.0"
edition = { workspace = true }
publish = false

[package.metadata.meka.loaders]
fennel-src = "fennel_src::loader"
lua-src = "test_loaders::lua_loader"
n64 = "test_loaders::cartridge_loader"

[features]
default = ["fennel160-lua54-vendored"]
fennel160-lua54-vendored = ["fennel-src/fennel160",
                            "fennel-src/mlua-lua54",
                            "fennel-src/mlua-vendored",
                            "meka-config-macros/mlua-lua54",
                            "meka-config-macros/mlua-vendored",
                            "mlua/lua54",
                            "mlua/vendored",
                            "mlua-module-manifest/mlua-lua54",
                            "mlua-module-manifest/mlua-vendored"]

[dependencies]
fennel-src = { path = "../fennel-src", default-features = false }
meka-config-macros = { path = "../meka-config-macros", default-features = false }
mlua = { workspace = true }
mlua-module-manifest = { path = "../mlua-module-manifest", default-features = false }
