[package]
name = "meka-config-tests"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["fennel153-lua54-vendored"]
fennel153-lua54-vendored = ["fennel-src/fennel153",
                            "fennel-src/mlua-lua54",
                            "fennel-src/mlua-vendored",
                            "meka-config/fennel153",
                            "meka-config/mlua-lua54",
                            "meka-config/mlua-vendored",
                            "mlua-module-manifest/mlua-lua54",
                            "mlua-module-manifest/mlua-vendored"]

[dev-dependencies]
fennel-src = { path = "../fennel-src", default-features = false }
meka-config = { path = "../meka-config", default-features = false }
mlua-module-manifest = { path = "../mlua-module-manifest", default-features = false }
